crates/goat_semantic/tests/integration/snapshots/function_as_expression.snap
---
source: crates/goat_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/goat_semantic/tests/integration/cfg_fixtures/function_as_expression.js
---
bb0: {

}

bb1: {
	statement
}

bb2: {

}

bb3: {
	return
}

bb4: {
	statement
}

bb5: {

}

bb6: {
	return
}

bb7: {
	statement
}

bb8: {

}

bb9: {
	return
}

bb10: {
	statement
}

bb11: {

}

bb12: {
	return
}

bb13: {
	statement
}

bb14: {

}

bb15: {
	return
}

bb16: {
	statement
}

bb17: {

}

bb18: {
	return
}

bb19: {
	statement
}

bb20: {

}

bb21: {
	return
}

bb22: {
	statement
}

bb23: {
	condition
}

bb24: {

}

bb25: {
	return
}

bb26: {

}

bb27: {

}

bb28: {
	statement
}

bb29: {
	condition
}

bb30: {

}

bb31: {
	return
}

bb32: {

}

bb33: {

}

bb34: {
	statement
}

bb35: {

}

bb36: {
	return
}

bb37: {
	statement
}

bb38: {

}

bb39: {
	return
}

bb40: {

}

digraph {
    0 [ label = "bb0" shape = box]
    1 [ label = "bb1
ExpressionStatement" shape = box]
    2 [ label = "bb2" shape = box]
    3 [ label = "bb3
return" shape = box]
    4 [ label = "bb4
ExpressionStatement" shape = box]
    5 [ label = "bb5" shape = box]
    6 [ label = "bb6
return" shape = box]
    7 [ label = "bb7
ExportDefaultDeclaration" shape = box]
    8 [ label = "bb8" shape = box]
    9 [ label = "bb9
return" shape = box]
    10 [ label = "bb10
ExpressionStatement" shape = box]
    11 [ label = "bb11" shape = box]
    12 [ label = "bb12
return" shape = box]
    13 [ label = "bb13
ExpressionStatement" shape = box]
    14 [ label = "bb14" shape = box]
    15 [ label = "bb15
return" shape = box]
    16 [ label = "bb16
ExpressionStatement" shape = box]
    17 [ label = "bb17" shape = box]
    18 [ label = "bb18
return" shape = box]
    19 [ label = "bb19
ExpressionStatement" shape = box]
    20 [ label = "bb20" shape = box]
    21 [ label = "bb21
return" shape = box]
    22 [ label = "bb22
ExpressionStatement" shape = box]
    23 [ label = "bb23
Condition(Function(f))" shape = box]
    24 [ label = "bb24" shape = box]
    25 [ label = "bb25
return" shape = box]
    26 [ label = "bb26" shape = box]
    27 [ label = "bb27" shape = box]
    28 [ label = "bb28
ExpressionStatement" shape = box]
    29 [ label = "bb29
Condition(Function(<anonymous>))" shape = box]
    30 [ label = "bb30" shape = box]
    31 [ label = "bb31
return" shape = box]
    32 [ label = "bb32" shape = box]
    33 [ label = "bb33" shape = box]
    34 [ label = "bb34
ExpressionStatement" shape = box]
    35 [ label = "bb35" shape = box]
    36 [ label = "bb36
return" shape = box]
    37 [ label = "bb37
ExpressionStatement" shape = box]
    38 [ label = "bb38" shape = box]
    39 [ label = "bb39
return" shape = box]
    40 [ label = "bb40" shape = box]
    1 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    3 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    1 -> 3 [ label="NewFunction"]
    4 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    1 -> 4 [ label="Normal"]
    6 -> 5 [ label="Error(Implicit)", color=red, style=dashed]
    4 -> 6 [ label="NewFunction"]
    7 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    4 -> 7 [ label="Normal"]
    9 -> 8 [ label="Error(Implicit)", color=red, style=dashed]
    7 -> 9 [ label="NewFunction"]
    10 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    7 -> 10 [ label="Normal"]
    12 -> 11 [ label="Error(Implicit)", color=red, style=dashed]
    10 -> 12 [ label="NewFunction"]
    13 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    10 -> 13 [ label="Normal"]
    15 -> 14 [ label="Error(Implicit)", color=red, style=dashed]
    13 -> 15 [ label="NewFunction"]
    16 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    13 -> 16 [ label="Normal"]
    18 -> 17 [ label="Error(Implicit)", color=red, style=dashed]
    16 -> 18 [ label="NewFunction"]
    19 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    16 -> 19 [ label="Normal"]
    21 -> 20 [ label="Error(Implicit)", color=red, style=dashed]
    19 -> 21 [ label="NewFunction"]
    22 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    19 -> 22 [ label="Normal"]
    23 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    25 -> 24 [ label="Error(Implicit)", color=red, style=dashed]
    23 -> 25 [ label="NewFunction"]
    26 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    23 -> 26 [ label="Normal"]
    27 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    28 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    22 -> 23 [ label="Normal"]
    26 -> 27 [ label="Normal"]
    26 -> 28 [ label="Normal"]
    27 -> 28 [ label="Normal"]
    29 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    31 -> 30 [ label="Error(Implicit)", color=red, style=dashed]
    29 -> 31 [ label="NewFunction"]
    32 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    29 -> 32 [ label="Normal"]
    33 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    34 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    28 -> 29 [ label="Normal"]
    32 -> 33 [ label="Normal"]
    32 -> 34 [ label="Normal"]
    33 -> 34 [ label="Normal"]
    36 -> 35 [ label="Error(Implicit)", color=red, style=dashed]
    34 -> 36 [ label="NewFunction"]
    37 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    34 -> 37 [ label="Normal"]
    39 -> 38 [ label="Error(Implicit)", color=red, style=dashed]
    37 -> 39 [ label="NewFunction"]
    40 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    37 -> 40 [ label="Normal"]
}
