crates/goat_semantic/tests/integration/snapshots/function_in_finally.snap
---
source: crates/goat_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/goat_semantic/tests/integration/cfg_fixtures/function_in_finally.js
---
bb0: {

}

bb1: {
	statement
}

bb2: {

}

bb3: {
	statement
	statement
}

bb4: {
	statement
}

bb5: {

}

bb6: {
	return
}

bb7: {
	statement
}

bb8: {

}

digraph {
    0 [ label = "bb0" shape = box]
    1 [ label = "bb1
TryStatement" shape = box]
    2 [ label = "bb2" shape = box]
    3 [ label = "bb3
BlockStatement
ExpressionStatement" shape = box]
    4 [ label = "bb4
BlockStatement" shape = box]
    5 [ label = "bb5" shape = box]
    6 [ label = "bb6
return" shape = box]
    7 [ label = "bb7
ExpressionStatement" shape = box]
    8 [ label = "bb8" shape = box]
    1 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    3 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    3 -> 2 [ label="Finalize"]
    4 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    2 -> 4 [ label="Normal"]
    6 -> 5 [ label="Error(Implicit)", color=red, style=dashed]
    4 -> 6 [ label="NewFunction"]
    7 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    4 -> 7 [ label="Normal"]
    1 -> 3 [ label="Normal"]
    8 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    7 -> 8 [ label="Join"]
}
