crates/goat_semantic/tests/integration/snapshots/import_as_function.snap
---
source: crates/goat_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/goat_semantic/tests/integration/cfg_fixtures/import_as_function.js
---
bb0: {

}

bb1: {
	statement
}

bb2: {

}

bb3: {
	statement
	return
}

digraph {
    0 [ label = "bb0" shape = box]
    1 [ label = "bb1
ExpressionStatement" shape = box]
    2 [ label = "bb2" shape = box]
    3 [ label = "bb3
ExpressionStatement
return" shape = box]
    1 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    3 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    1 -> 3 [ label="NewFunction"]
}
