crates/goat_semantic/tests/integration/snapshots/infix_operators.snap
---
source: crates/goat_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/goat_semantic/tests/integration/cfg_fixtures/infix_operators.js
---
bb0: {

}

bb1: {
	statement
	statement
}

bb2: {
	condition
}

bb3: {

}

bb4: {

}

digraph {
    0 [ label = "bb0" shape = box]
    1 [ label = "bb1
ExpressionStatement
ExpressionStatement" shape = box]
    2 [ label = "bb2
Condition(IdentifierReference(a))" shape = box]
    3 [ label = "bb3" shape = box]
    4 [ label = "bb4" shape = box]
    1 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    2 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    3 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    4 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    1 -> 2 [ label="Normal"]
    2 -> 3 [ label="Normal"]
    2 -> 4 [ label="Normal"]
    3 -> 4 [ label="Normal"]
}
