crates/goat_semantic/tests/integration/snapshots/labelled_try_break.snap
---
source: crates/goat_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/goat_semantic/tests/integration/cfg_fixtures/labelled_try_break.js
---
bb0: {

}

bb1: {
	statement
}

bb2: {

}

bb3: {
	statement
	statement
}

bb4: {

}

bb5: {
	statement
	return <value>
}

bb6: {
	unreachable
}

bb7: {
	statement
	break <label>
}

bb8: {
	unreachable
}

bb9: {

}

bb10: {
	return <value>
}

bb11: {
	unreachable
}

bb12: {

}

digraph {
    0 [ label = "bb0" shape = box]
    1 [ label = "bb1
VariableDeclaration" shape = box]
    2 [ label = "bb2" shape = box]
    3 [ label = "bb3
LabeledStatement(label)
TryStatement" shape = box]
    4 [ label = "bb4" shape = box]
    5 [ label = "bb5
BlockStatement
return <value>" shape = box]
    6 [ label = "bb6
unreachable" shape = box]
    7 [ label = "bb7
BlockStatement
break <label>" shape = box]
    8 [ label = "bb8
unreachable" shape = box]
    9 [ label = "bb9" shape = box]
    10 [ label = "bb10
return <value>" shape = box]
    11 [ label = "bb11
unreachable" shape = box]
    12 [ label = "bb12" shape = box]
    1 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    3 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    1 -> 3 [ label="NewFunction"]
    5 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    5 -> 4 [ label="Finalize"]
    6 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    6 -> 4 [ label="Finalize", style="dotted"]
    5 -> 6 [ label="Unreachable", style="dotted"]
    7 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    4 -> 7 [ label="Normal"]
    8 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    7 -> 8 [ label="Unreachable", style="dotted"]
    3 -> 5 [ label="Normal"]
    9 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    8 -> 9 [ label="Unreachable", style="dotted"]
    10 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    9 -> 10 [ label="Normal", style="dotted"]
    7 -> 10 [ label="Jump", color=green]
    11 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    10 -> 11 [ label="Unreachable", style="dotted"]
    12 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    1 -> 12 [ label="Normal"]
}
